made some changes locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! This is my first webapp!
+            Hi! This is my first webapp!I am running it on my pc not on hasura servers
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
