[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,17 @@
                 Article One | Krushna Borkar
             </title>
             <meta name="viewport" content="width-device-width, initial-scale-1"/>
+            <style>
+                .container{
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: red;
+                    font-family: sans-serif;
+                }
+            </style>
         </head>
     <body>
+        <div class="container">
         <div>
             <a href="#">Home</a>
         </div>
@@ -26,7 +35,7 @@
                 This is contet area.Write content here.This is contet area.Write content here.This is contet area.Write content here.This is contet area.Write content here.This is contet area.Write content here.This is contet area.Write content here.This is contet area.Write content here.This is contet area.Write content here.
             </p>
         </div>
-        
+        </div>
         
     </body>    
 </html>
