--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,12 +5,15 @@
             </title>
             <meta name="viewport" content="width-device-width, initial-scale-1"/>
             <style>
-                .container{
-                    max-width: 800px;
-                    margin: 0 auto;
-                    color: red;
-                    font-family: sans-serif;
-                }
+                .container {
+                            max-width: 800px;
+                            margin: 0 auto;
+                            color: red;
+                            font-family: sans-serif;
+                            padding-top: 60px;
+                            padding-left: 10px;
+                            padding-right: 15px;
+                        }
             </style>
         </head>
     <body>
