[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,17 +4,7 @@
                 Article two | Krushna Borkar
             </title>
             <meta name="viewport" content="width-device-width, initial-scale-1"/>
-            <style>
-                .container {
-                            max-width: 800px;
-                            margin: 0 auto;
-                            color: red;
-                            font-family: sans-serif;
-                            padding-top: 60px;
-                            padding-left: 10px;
-                            padding-right: 15px;
-                        }
-            </style>
+            <link href="/ui/style.css" rel="stylesheet"/>
         </head>
     <body>
         <div class="container">
@@ -23,7 +13,7 @@
         </div>
      <hr/>
         <h3>
-            This is heading
+            This is heading one
         </h3>
         <div>
             <p>
