--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Hi! This is my first webapp!I am running it on my pc not on hasura servers
         </div>
+        <script>
+            alert('Hi welcome I am krushna');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
