--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,27 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
-            <img id="img" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="https://storage.googleapis.com/gweb-uniblog-publish-prod/static/blog/images/google-200x200.7714256da16f.png" class="img-medium"/>
         </div>
         <br>
-        <div id="main-text" class="center text-big bold">
-            Hi! This is my first webapp!I am running it on my pc not on hasura servers
+        <hr>
+        <h3>
+            personal section
+        </h3>
+        <div>
+            Hie my name is krushna
+        </div>
+        <hr>
+        h3>
+            professional section
+        </h3>
+        <div>
+           I am in gcoea
+        </div>
+        <hr>
+        
         </div>
         <script>
             alert('Hi welcome I am krushna');
